--- a/style.css
+++ b/style.css
@@ -11,3 +11,24 @@ body {
 #content {
 	border: 1px solid gold;
 }
+
+.listing-article-container {
+  border: 1px solid #bdc3c7;
+  margin: 1em auto;
+  width: 97%;
+  overflow: hidden;
+  padding-bottom: 5px;
+}
+.listing-article-title {
+  width: 100%;
+  color: #333;
+  font-weight: bold;
+  font-size: 120%;
+  width: 100%;
+  padding: 0.5em;
+  border-bottom: 1px solid #bdc3c7;
+}
+.listing-article-body {
+  text-align: left;
+  margin: .15em .4em 0 .4em;
+}
